--- a/Body/ex1/index.html
+++ b/Body/ex1/index.html
@@ -1,237 +1,98 @@
 <!DOCTYPE html>
-<!-- Coding By CodingNepal - www.codingnepalweb.com -->
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Coffee Website HTML and CSS | CodingNepal</title>
-        <link rel="stylesheet" href="style.css" />
-        <!-- Google Fonts Links For Icon -->
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-        <style type="text/css">
-            /* Importing Google font - Poppins */
-            @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
-
+        <style>
             * {
                 margin: 0;
                 padding: 0;
                 box-sizing: border-box;
-                font-family: "Poppins", sans-serif;
+                font-family: Monospace, sans-serif;
             }
-
-            header {
-                position: fixed;
-                top: 0;
-                left: 0;
+            .about-us {
+                height: 135vh;
                 width: 100%;
-                padding: 20px;
+                padding: 90px 0;
+                background: #636363;
             }
-
-            header .navbar {
-                display: flex;
-                align-items: center;
-                justify-content: space-between;
-                max-width: 1200px;
+            .vertical-image {
+                position:absolute;
+                top:250px;
+                left:10px;
+                height: 700px;
+                width: auto;
+            }
+            .about {
+                width: 800px;
+                height: 150 vh;
+                max-width: 85%;
                 margin: 0 auto;
             }
-
-            .navbar .logo {
-                color: #fff;
-                font-weight: 600;
-                font-size: 2.1rem;
-                text-decoration: none;
-            }
-
-            .navbar .logo span {
-                color: #c06b3e;
-            }
-
-            .navbar .menu-links {
+            .text {
+                max-width: 1000px;
                 display: flex;
-                list-style: none;
-                gap: 35px;
-            }
-
-            .navbar a {
-                color: #fff;
-                text-decoration: none;
-                transition: 0.2s ease;
-            }
-
-            .navbar a:hover {
-                color: #c06b3e;
-            }
-
-            .hero-section {
-              height: 100vh;
-              display: flex;
-              align-items: center;
-              padding: 0 20px;
-              position: relative;
-            }
-
-            .hero-section::before {
-              content: "";
-              background-image: url("&Horizontal-image&");
-              background-position: center;
-              background-size: cover;
-              filter: brightness(70%);
-              position: absolute;
-              top: 0;
-              left: 0;
-              width: 100%;
-              height: 100%;
-              z-index: -1;
-            }
-
-            .hero-section .content {
-                max-width: 1200px;
+                align-items: start;
+                justify-content: space-around;
                 margin: 0 auto;
-                width: 100%;
-                color: #fff;
-                z-index: 1;
             }
-
-            .hero-section .content h2 {
-                font-size: 3rem;
-                max-width: 600px;
-                line-height: 70px;
-            }
-
-            .hero-section .content p {
-                font-weight: 300;
-                max-width: 600px;
-                margin-top: 15px;
-            }
-
-            .hero-section .content button {
-                background: #fff;
-                padding: 12px 30px;
-                border: none;
-                font-size: 1rem;
-                border-radius: 6px;
-                margin-top: 38px;
-                cursor: pointer;
-                font-weight: 500;
-                transition: 0.2s ease;
-            }
-
-            .hero-section .content button:hover {
-                color: #fff;
-                background: #c06b3e;
-            }
-
-            #close-menu-btn {
+            .text2 {
+                width: 800px;
                 position: absolute;
-                right: 20px;
-                top: 20px;
-                cursor: pointer;
-                display: none;
+                top: 250px;
+                right: 50px
             }
-
-            #hamburger-btn {
+            h1 {
+                color:white;
+                text-align: center;
+                font-size: 90px;
+                font-weight: 600;
+            }
+            span {
+                color: #4070f4;
+            }
+            p {
+                text-align: left;
+                color:white;
+                font-size: 40px;
+                line-height: 45px;
+                letter-spacing: 1px;
+            }
+            .data {
+                margin-top: 30px;
+            }
+            .hire {
+                font-size: 30px;
+                background: #4070f4;
                 color: #fff;
-                cursor: pointer;
-                display: none;
+                text-decoration: none;
+                border: none;
+                padding: 8px 25px;
+                border-radius: 6px;
+                transition: 0.5s;
             }
-
-            @media (max-width: 768px) {
-                header {
-                    padding: 10px;
-                }
-
-                header.show-mobile-menu::before {
-                    content: "";
-                    position: fixed;
-                    left: 0;
-                    top: 0;
-                    width: 100%;
-                    height: 100%;
-                    backdrop-filter: blur(10px);
-                }
-
-                .navbar .logo {
-                    font-size: 1.7rem;
-                }
-
-                #hamburger-btn,
-                #close-menu-btn {
-                    display: block;
-                }
-
-                .navbar .menu-links {
-                    position: fixed;
-                    top: 0;
-                    left: -250px;
-                    width: 250px;
-                    height: 100vh;
-                    background: #fff;
-                    flex-direction: column;
-                    padding: 70px 40px 0;
-                    transition: left 0.2s ease;
-                }
-
-                header.show-mobile-menu .navbar .menu-links {
-                    left: 0;
-                }
-
-                .navbar a {
-                    color: #000;
-                }
-
-                .hero-section .content {
-                    text-align: center;
-                }
-
-                .hero-section .content :is(h2, p) {
-                    max-width: 100%;
-                    background-color: rgb(0,0,0); /* Fallback color */
-                    background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
-                    color: white;
-                    font-weight: bold;
-                    border: 3px solid #f1f1f1;
-                    position: absolute;
-                    top: 50%;
-                    left: 50%;
-                    transform: translate(-50%, -50%);
-                    z-index: 2;
-                    width: 80%;
-                    padding: 20px;
-                    text-align: center;
-                }
-
-                .hero-section .content h2 {
-                    font-size: 2.3rem;
-                    line-height: 60px;
-                }
-
-                .hero-section .content button {
-                    padding: 9px 18px;
-                }
-
+            .hire:hover {
+                background: #002ac2;
+                border: 1px solid #4070f4;
             }
         </style>
     </head>
     <body>
-        <div class="container">
-            <section class="hero-section">
-                <div class="content">
-                    <h2> &Company-name& </h2>
-                    <p>
-                        &Company-description&
-                    </p>
-                    <button>Read more</button>
+        <section class="about-us">
+            <div class="about">
+                <img src=&Vertical-image& class="vertical-image" >
+
+                <div class="text">
+                    <h1>&Company-name&</h1>
                 </div>
-            </section>
-        </div>
-        <script>
-            const header = document.querySelector("header");
-            const hamburgerBtn = document.querySelector("#hamburger-btn");
-            const closeMenuBtn = document.querySelector("#close-menu-btn");
-            // Toggle mobile menu on hamburger button click
-            hamburgerBtn.addEventListener("click", () => header.classList.toggle("show-mobile-menu"));
-            // Close mobile menu on close button click
-            closeMenuBtn.addEventListener("click", () => hamburgerBtn.click());
-        </script>
+                <div class="text2">
+                    <p>&Company-description&</p>
+                    <div class="data">
+                    <a href="#" class="hire">read more</a>
+                </div>
+                </div>
+            </div>
+
+        </section>
     </body>
 </html>
