--- a/Header/ex2/index.html
+++ b/Header/ex2/index.html
@@ -2,61 +2,47 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<style type="text/css">
+	<style>
 		body {
-			margin: auto;
+			margin: 0;
+			font-family: Monospace
 		}
 		header {
 			display: flex;
 			width: 100%;
 			height: 7vh;
 			align-items: center;
-			justify-content: space-between;
-			background-color: black;
-			position: fixed;
+			justify-content: center;
+			background-color: #141414;
 		}
 		a {
-			font-size: 100%;
-			color: gray;
+			font-size: 135%;
+			color: #949494;
 			text-decoration: none;
-			transition: color 0.3s ease-out, font-size 0.3s ease-out; /* Add this line */
+			transition: color 0.2s ease-out, font-size 0.3s ease-out; /* Add this line */
 		}
 
 		a:hover {
 			color: white;
-			font-size: 105%;
+			font-size: 135%;
 			font-weight: bold;
 		}
-		.bl{
+		.buttons{
+			font-weight: normal;
 			display: flex;
 			justify-content: space-around;
-			width: 60%;
-		}
-		.logo-header {
-			height: 100%;
-			width: 15%;
-			display: flex;
-			justify-content: center;
-			align-items: center;
-		}
-		.logo-header img {
-			height: 80%;
+			width: 40%;
 		}
 
 	</style>
-</head>	
+</head>
 <body>
 	<header>
-		<div class="logo-header" >
-			<img src="logo.png">
-		</div>
-		<div class="bl">
+		<div class="buttons">
 			<a href="">Home</a>
-			<a href="">Products</a>
+			<a href="">Our products</a>
 			<a href="">Learn more</a>
-			<a href="">About us</a>
-			<a href="">Contact us</a>
+			<a href="">Contacts</a>
 		</div>
 	</header>
 </body>
